Adds todo app to projects

--- a/projects.html
+++ b/projects.html
@@ -104,6 +104,22 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <!-- .card -->
 
         <article class="card">
+            <picture class="thumbnail">
+              <img src="img/todo-app-screengrap.PNG" alt="todo app" />
+            </picture>
+          <a href="https://github.com/davidtcalabrese/todo-app">
+            <div class="card-content">
+              <h2>Todo App</h2>
+              <p>
+                The obligatory todo app that all novice programmers have to make. This was created with PHP and MySQL. No live version on GitHub Pages.    
+              </p>
+            </div>
+            <!-- .card-content -->
+          </a>
+        </article>
+        <!-- .card -->
+
+        <article class="card">
 
             <picture class="thumbnail">
               <a href="https://davidtcalabrese.github.io/sort-game/">
