Adds personal website to project page

--- a/projects.html
+++ b/projects.html
@@ -157,6 +157,24 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         </article>
         <!-- .card -->
 
+        <article class="card">
+          <a href="https:www.davidcalabrese.org">
+            <picture class="thumbnail">
+              <img src="img/personal-website-screengrab.PNG" alt="personal website" />
+            </picture>
+          </a>
+          <a href="https://github.com/davidtcalabrese/website">
+            <div class="card-content">
+              <h2>Personal Website</h2>
+              <p>
+                The website you're on now! Custom built and designed to showcase projects and resume. 
+              </p>
+            </div>
+            <!-- .card-content -->
+          </a>
+        </article>
+        <!-- .card -->
+
       </section>
     </main>
 
