--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <!-- .card -->
 
         <article class="card">
-          <a href="https:www.davidcalabrese.org">
+          <a href="https://www.davidcalabrese.org">
             <picture class="thumbnail">
               <img src="img/personal-website-screengrab.PNG" alt="personal website" />
             </picture>
