--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <main class="container">
 
       <section class="intro">
+        <h2>Welcome</h2>
         <p>
-          Thanks for coming to visit! This site is currently under construction &#8212; most of the site now is just placeholders for what will eventually be (I promise) fantastic content &#8212; I appreciate your patience. I'm whittling away at the site in my spare time and I hope to be done by the end of 2021. At that point it will feature my portfolio of projects as well as a resume and other contact information for employers to find and hire me. In the meantime, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
+          Thanks for coming to visit! This site is a work in progress, I'm whittling away at it in my spare time and I hope to be done by the end of 2021. For now it features a number of my portfolio of projects as well as a resume and other contact information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
         </p>
       </section>
-
+      
       <section class="banner">
+        <blockquote>Make hay while the sun shines</blockquote>
         <img src="img/lichtenstein-sunrise.jpg" alt="sunrise">
       </section> 
     </main>
