Adds cervantes quote

--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <main class="container">
 
       <section class="intro">
-        <h2>Welcome</h2>
         <p>
           Thanks for coming to visit! This site is a work in progress, I'm whittling away at it in my spare time and I hope to be done by the end of 2021. For now it features a number of my portfolio of projects as well as a resume and other contact information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
         </p>
@@ -89,6 +88,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       
       <section class="banner">
         <blockquote>Make hay while the sun shines</blockquote>
+        <span class="quote-author">-Miguel de Cervantes</span>
         <img src="img/lichtenstein-sunrise.jpg" alt="sunrise">
       </section> 
     </main>
