Fixes grammatical error

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
       <section class="intro">
         <p>
-          Thanks for coming to visit! This site is a work in progress, I'm whittling away at it in my spare time and I hope to be done by the end of 2021. For now it features a number of my portfolio of projects as well as a resume and other contact information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
+          Thanks for coming to visit! This site is a work in progress, I'm whittling away at it in my spare time and I hope to be done by the end of 2021. For now it features a number of projects from my portfolio as well as a resume and other contact information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
         </p>
       </section>
       
