Adds to do app img correct aspect ratio

--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
           </a>
             <a href="https://github.com/davidtcalabrese/dad-jokes">
               <div class="card-content">
-                <h2>Dad Joke Fetcher</h2>
+                <h2>Dad Jokes</h2>
                 <p>
                   This is a site I made using JavaScript async/await to pull in jokes from an API (icanhazdadjoke). I'm a fan of Phil Dunphy, Ty Burrell's character on Modern Family, so I added him for good measure. 
                 </p>
@@ -105,7 +105,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
         <article class="card">
             <picture class="thumbnail">
-              <img src="img/todo-app-screengrap.PNG" alt="todo app" />
+              <img src="img/to-do-2.PNG" alt="todo app" />
             </picture>
           <a href="https://github.com/davidtcalabrese/todo-app">
             <div class="card-content">
