Fixes link on resume

--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 </div>
 
                 <div class="website">
-                    <span><a href="DavidCalabrese.org">DavidCalabrese.org</a></span>
+                    <span><a href="https://www.davidcalabrese.org/">DavidCalabrese.org</a></span>
               </div>
             </div>
 
