Swaps out Joshua Tree for To Do App

--- a/resume.html
+++ b/resume.html
@@ -146,8 +146,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                   <li>Personal site with projects and resume (in progress) <span class="float-right">
                     <a href="https://github.com/davidtcalabrese/website" target="_blank">Personal Website</a> </span>
                 </li>
-                  <li>School project: create a webpage for a national park <span class="float-right">
-                    <a href="https://davidtcalabrese.github.io/friends-of-joshua-tree/" target="_blank">Joshua Tree</a> </span>
+                  <li>The obligatory to-do app, built with PHP and MariaDB <span class="float-right">
+                    <a href="https://github.com/davidtcalabrese/todo-app" target="_blank">To Do App</a> </span>
                 </li>
                 </ul>
         </div> <!-- end .projects -->
