--- a/resume.html
+++ b/resume.html
@@ -144,7 +144,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                     <a href="https://github.com/davidtcalabrese/sort-game" target="_blank">City Sort</a> </span>
                 </li>
                   <li><span class="description">Personal site with projects and resume contact info</span><span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/website" target="_blank">Personal Website</a> </span>
+                    <a href="https://github.com/davidtcalabrese/website" target="_blank">Personal Site</a> </span>
                 </li>
                   <li><span class="description">The obligatory to-do app, built with PHP and MariaDB</span><span class="float-right">
                     <a href="https://github.com/davidtcalabrese/todo-app" target="_blank">To Do App</a> </span>
