--- a/resume.html
+++ b/resume.html
@@ -137,16 +137,16 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <h2>Projects</h2>
             </div>
                 <ul>
-                  <li><span class="description">Site using JS async/await to pull in jokes from an API</span><span class="float-right">
+                  <li><span class="description">Uses JS async/await to pull in jokes from an API</span><span class="float-right">
                     <a href="https://github.com/davidtcalabrese/dad-jokes" target="_blank">Dad Jokes</a> </span>
                 </li>
                   <li><span class="description">Sorting game using the HTML drag-and-drop API</span><span class="float-right"> 
                     <a href="https://github.com/davidtcalabrese/sort-game" target="_blank">City Sort</a> </span>
                 </li>
-                  <li><span class="description">Personal site with projects and resume contact info</span><span class="float-right">
+                  <li><span class="description">Personal site with projects, resume, contact info</span><span class="float-right">
                     <a href="https://github.com/davidtcalabrese/website" target="_blank">Personal Site</a> </span>
                 </li>
-                  <li><span class="description">The obligatory to-do app, built with PHP and MariaDB</span><span class="float-right">
+                  <li><span class="description">The obligatory to-do app, with PHP & MariaDB</span><span class="float-right">
                     <a href="https://github.com/davidtcalabrese/todo-app" target="_blank">To Do App</a> </span>
                 </li>
                 </ul>
