Shortens school name

--- a/resume.html
+++ b/resume.html
@@ -98,7 +98,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <p class="degree-title"><b>Associate Degree in Web Software Development</b>
                   <span class="float-right">Anticipated Graduation Date - May 2022</span>
                 </p>
-                <p class="school-name">Madison Area Technical College</p>
+                <p class="school-name">Madison College</p>
             </div>
 
             <div class="bachelor">
