--- a/resume.html
+++ b/resume.html
@@ -96,14 +96,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
             <div class="associate">
                 <p class="degree-title"><b>Associate Degree in Web Software Development</b>
-                  <span class="float-right">Anticipated Graduation Date - May 2022</span>
+                  <span class="float-right-edu">Anticipated Graduation Date - May 2022</span>
                 </p>
                 <p class="school-name">Madison College</p>
             </div>
 
             <div class="bachelor">
                 <p class="degree-title"><b>Bachelor of Arts in Comparative Literature	</b>
-                  <span class="float-right bach">December 2016</span>
+                  <span class="float-right-edu">December 2016</span>
                 </p>   
                 <p class="school-name">University of Wisconsin-Milwaukee</p>
           </div>
