--- a/resume.html
+++ b/resume.html
@@ -84,9 +84,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               </div>
             </div>
 
-          
-            <br>
-
         </div> <!-- end .header -->
 
         <section class="education">
@@ -96,14 +93,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
             <div class="associate">
                 <p class="degree-title"><b>Associate Degree in Web Software Development</b>
-                  <span class="float-right-edu">Anticipated Graduation Date - May 2022</span>
+                  <span class="float-right grad-date">Anticipated Graduation Date - May 2022</span>
                 </p>
                 <p class="school-name">Madison College</p>
             </div>
 
             <div class="bachelor">
                 <p class="degree-title"><b>Bachelor of Arts in Comparative Literature	</b>
-                  <span class="float-right-edu">December 2016</span>
+                  <span class="float-right grad-date">December 2016</span>
                 </p>   
                 <p class="school-name">University of Wisconsin-Milwaukee</p>
           </div>
@@ -121,11 +118,11 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <li>Java, Jakarta EE</li>
                 <li>JavaScript, Node.js</li>
                 <li>HTML, CSS, Sass</li>
-                <li>MySQL, Oracle, PostgreSQL</li>
+                <li>MySQL, Oracle, Postgres</li>
                 <li>Python, Flask</li>
                 <li>Git, Github, Git Flow</li>
                 <li>Linux, Shell Scripting</li>
-                <li>Cloud & Container Experience</li>
+                <li>Cloud & Container</li>
                 <li>PHP</li>
                 <li>Postman, API Development</li>
               </ul>
