swaps out book app with expense tracker

--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             <div class="card-content">
               <h2>City Sort Game</h2>
               <p>
-                Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see how much of it will end up going to Uncle Sam as well as a breakdown of where the different taxes are going. 
+                This is a sorting game I made using JavaScript and the drag and drop API. 
               </p>
             </div>
             <!-- .card-content -->
@@ -138,16 +138,16 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <!-- .card -->
 
         <article class="card">
-          <a href="https://davidtcalabrese.github.io/book-generator/">
+          <a href="#">
             <picture class="thumbnail">
-              <img src="img/random-book-screenshot.PNG" alt="city sort" />
+              <img src="img/expense-tracker-1182_866.png" alt="expense tracker screen grab" />
             </picture>
           </a>
-          <a href="https://github.com/davidtcalabrese/book-generator">
+          <a href="https://github.com/davidtcalabrese/expense-tracker">
             <div class="card-content">
-              <h2>Random Book Generator</h2>
+              <h2>Expense Tracker</h2>
               <p>
-                This page was created as a tool for a book club member who had a hard timing making a decision when it was his turn to select a book.   
+                This is a straightforward React application intended to help people track income and expenses.   
               </p>
             </div>
             <!-- .card-content -->
