adds link to react app on gh pages

--- a/projects.html
+++ b/projects.html
@@ -138,7 +138,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <!-- .card -->
 
         <article class="card">
-          <a href="#">
+          <a href="https://davidtcalabrese.github.io/expense-tracker/">
             <picture class="thumbnail">
               <img src="img/expense-tracker-1182_866.png" alt="expense tracker screen grab" />
             </picture>
