adds new projects to project section

--- a/resume.html
+++ b/resume.html
@@ -134,18 +134,21 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <h2>Projects</h2>
             </div>
                 <ul>
-                  <li><span class="description">Uses JS async/await to pull in jokes from an API</span><span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/dad-jokes" target="_blank">Dad Jokes</a> </span>
-                </li>
-                  <li><span class="description">Sorting game using the HTML drag-and-drop API</span><span class="float-right"> 
+                  <li><span class="description">A full-stack, IoT weather alert app built in Node ⚠️</span><span class="float-right">
+                    <a href="https://github.com/davidtcalabrese/ISWAM" target="_blank">ISWAM</a> </span>
+                  </li>
+                  <li><span class="description">An expense tracker app built in React 💸</span><span class="float-right">
+                    <a href="https://github.com/davidtcalabrese/ISWAM" target="_blank">Keep $core</a> </span>
+                  </li>
+                  <li><span class="description">Sorting game using the HTML drag-and-drop API 🌆</span><span class="float-right"> 
                     <a href="https://github.com/davidtcalabrese/sort-game" target="_blank">City Sort</a> </span>
-                </li>
-                  <li><span class="description">Personal site with projects, resume, contact info</span><span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/website" target="_blank">Personal Site</a> </span>
-                </li>
-                  <li><span class="description">The obligatory to-do app, with PHP & MariaDB</span><span class="float-right">
+                  </li>
+                  <li><span class="description">Personal site with projects, resume, contact info 👨‍💼</span><span class="float-right">
+                    <a href="https://github.com/davidtcalabrese/website" target="_blank">My Site</a> </span>
+                  </li>
+                  <li><span class="description">The obligatory to-do app, with PHP & MariaDB ☑</span><span class="float-right">
                     <a href="https://github.com/davidtcalabrese/todo-app" target="_blank">To Do App</a> </span>
-                </li>
+                  </li>
                 </ul>
         </div> <!-- end .projects -->
 
@@ -192,7 +195,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         </div> <!-- end .experience -->
 
         <div class="download">
-          <form action="/Resume-sept-21-pdf.pdf" method="get">
+          <form action="/Resume-12-21.pdf" method="get">
             <button class="download-btn" type="submit">Download PDF</button>
           </form>
         </div>
