--- a/projects.html
+++ b/projects.html
@@ -176,12 +176,12 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       </section>
     </main>
 
-    <footer>
+    <footer id="footer">
       <div class="social">
         <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="https://github.com/davidtcalabrese" rel="noreferrer noopener">
+        <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">
           <i class="fab fa-github fa-2x"></i>
         </a>
         <a href="https://www.facebook.com/david.calabrese.334/">
