--- a/index.html
+++ b/index.html
@@ -11,43 +11,20 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-      crossorigin="anonymous"
-    />
-    <!-- jquery -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-      defer
-    ></script>
-    <!-- popper plugin -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-      crossorigin="anonymous"
-      defer
-    ></script>
-    <!-- bootstrap's js plugins -->
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-      crossorigin="anonymous"
-      defer
-    ></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- bootstrap js bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Poly&family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <link rel="alternate icon" href="img/favicon.ico" />
-    <script src="script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <script src="js/includeHTML.js"></script>
     <title>David Calabrese | Web Developer | For Hire</title>
   </head>
 
@@ -78,22 +55,16 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
     <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
 
-    <main class="container">
+    <main class="container-xl">
 
-      <section class="intro">
-        <p>
-          Thanks for coming to visit! This site is a work in progress, I'm whittling away at it in my spare time and I hope to be done by the end of 2021. For now it features a number of projects from my portfolio as well as a resume and other contact information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
-        </p>
-      </section>
-      
-      <section class="banner">
-        <blockquote>Make hay while the sun shines</blockquote>
-        <span class="quote-author">-Miguel de Cervantes</span>
-        <img src="img/lichtenstein-sunrise.jpg" alt="sunrise">
-      </section> 
-    </main>
+    <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3">
+      <h3>Thanks for coming to visit!</h3>
+      <p class="lead">This site features a number of my portfolio projects as well as a resume and other contact information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
+      </p>
+    </div>
+  </main>
 
-    <footer>
+    <footer id="footer">
       <div class="social">
         <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/">
           <i class="fab fa-linkedin fa-2x"></i>
@@ -109,6 +80,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         </a>
       </div>
     </footer>
+        
   </body>
 </html>
 
