--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,22 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       <section class="cards">
 
         <article class="card">
+            <picture class="thumbnail">
+              <img src="img/ISWAM-5.PNG" alt="ISWAM home" id="iswam-img"/>
+            </picture>
+          </a>
+          <a href="https://github.com/davidtcalabrese/ISWAM">
+              <div class="card-content">
+                <h2>ISWAM</h2>
+                <p>
+                  The IoT Severe Weather Alert Monitor. A full stack JavaScript/Node application that calls APIs for current weather data and NWS alerts and sends them to the browser and an IoT device. No live version on GitHub pages.
+                </p>
+              </div>
+            <!-- .card-content -->
+        </article>
+        <!-- .card -->
+
+        <article class="card">
           <a href="https://davidtcalabrese.github.io/tax-calculator/">
             <picture class="thumbnail">
               <img src="img/tax-calculator-screenshot.PNG" alt="tax calculator" />
