updates script tags for restructure

--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <link rel="alternate icon" href="img/favicon.ico" />
-    <script src="script.js" defer></script>
+    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/resume.css" />
     <title>David Calabrese | Web Developer | For Hire</title>
