--- a/projects.html
+++ b/projects.html
@@ -10,17 +10,12 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <!-- bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- bootstrap js bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Poly&family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
@@ -34,30 +29,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
   <body>
     <header>
- 
-      <nav class="navbar">
-        <ul class="nav-items">
-          <li><a href="index.html" class="nav-item">home</a></li>
-          <li><a href="resume.html" class="nav-item">resume</a></li>
-          <li><a href="projects.html" class="nav-item">projects</a></li>
-          <li><a href="about.html" class="nav-item">about</a></li>
-          <li><a href="contact.html" class="nav-item">contact</a></li>
-        </ul>
-        <div class="navbar-toggle" id="navbar-toggle">
-          <i class="fas fa-bars"></i>
-        </div>
-      </nav>
-
-      <div class="center">
-        <img class="propic" src="img/profile-pic-circle.png" alt="" />
-        <div class="name-container">
-          <h1>David Calabrese</h1>
-        </div>
-        <h2><small>Software Developer</small></h2>
-      </div>
+      <nav include-html="includes/navigation.html"></nav>
+      <div include-html="includes/banner.html"></div>
     </header>
-
-    <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
 
     <main class="container">
 
@@ -192,22 +166,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       </section>
     </main>
 
-    <footer id="footer">
-      <div class="social">
-        <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/">
-          <i class="fab fa-linkedin fa-2x"></i>
-        </a>
-        <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">
-          <i class="fab fa-github fa-2x"></i>
-        </a>
-        <a href="https://www.facebook.com/david.calabrese.334/">
-          <i class="fab fa-facebook fa-2x"></i>
-        </a>
-        <a href="https://twitter.com/cuentodenada1">
-          <i class="fab fa-twitter fa-2x"></i>
-        </a>
-      </div>
-    </footer>
+    <footer include-html="includes/footer.html"></footer>
+    <script src="js/includeHTML.js"></script>
+    <script>includeHTML();</script>
   </body>
 </html>
 
