fixes short imgs

--- a/projects.html
+++ b/projects.html
@@ -57,10 +57,10 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         </article>
         <!-- .card -->
 
-        <article class="card">
+        <article class="card" id="tax">
           <a href="https://davidtcalabrese.github.io/tax-calculator/">
             <picture class="thumbnail">
-              <img src="img/tax-calculator-screenshot.PNG" alt="tax calculator" />
+              <img class="h-100" src="img/tax-calculator-screenshot.PNG" alt="tax calculator" />
             </picture>
           </a>
           <a href="https://github.com/davidtcalabrese/tax-calculator">
@@ -75,10 +75,10 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         </article>
         <!-- .card -->
 
-        <article class="card">
+        <article class="card short">
           <a href="https://davidtcalabrese.github.io/dad-jokes/">
             <picture class="thumbnail">
-              <img src="img/dad-jokes-screenshot.PNG" alt="dad jokes" />
+              <img class="h-100" src="img/dad-jokes-screenshot.PNG" alt="dad jokes" />
             </picture>
           </a>
             <a href="https://github.com/davidtcalabrese/dad-jokes">
@@ -112,7 +112,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <article class="card">
           <a href="https://davidtcalabrese.github.io/sort-game/">
             <picture class="thumbnail">
-                <img src="img/city-sort-1248-866.png" alt="city sort" />
+                <img class="h-100" src="img/city-sort-1248-866.png" alt="city sort" />
             </picture>
           </a>
           <a href="https://github.com/davidtcalabrese/sort-game">
