--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
     <link rel="alternate icon" href="img/favicon.ico" />
-    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/index.css" />
     <title>David Calabrese | Web Developer | For Hire</title>
@@ -31,7 +30,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <header>
       <nav include-html="includes/navigation.html"></nav>
       <div include-html="includes/banner.html"></div>
+      <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
     </header>
+
 
     <main class="container-xl">
       <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3">
@@ -44,6 +45,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <footer include-html="includes/footer.html"></footer>
     <script src="js/includeHTML.js"></script>
     <script>includeHTML();</script>
+    <script src="js/script.js"></script>
   </body>
 </html>
 
