--- a/resume.html
+++ b/resume.html
@@ -31,6 +31,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <header>
       <nav include-html="includes/navigation.html"></nav>
       <div include-html="includes/banner.html"></div>
+      <img src="img/sun-moon.png" alt="sun and moon" id="theme-switcher">
     </header>
 
     <main class="container">
