--- a/resume.html
+++ b/resume.html
@@ -17,6 +17,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Poly&family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Outfit:wght@300&family=Poly&family=Raleway:wght@100&display=swap" rel="stylesheet">
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
@@ -37,74 +38,71 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       <div class="container">
         <div class="header">
             <div class="title">
-                <h1>David Calabrese</h1>
+              <h1>David Calabrese</h1>
             </div>
 
             <div class="contact-info">
+              <div class="email">
+                <a href="mailto:dcalabrese414@gmail.com">dcalabrese414@gmail.com</a>
+              </div>
 
-                <div class="email">
-                  <a href="mailto:dcalabrese414@gmail.com">dcalabrese414@gmail.com</a>
-                </div>
+              <div class="city">
+                <span>Madison, WI</span>
+              </div>
 
-                <div class="city">
-                    <span>Madison, WI</span>
-                </div>
+              <div class="phone">
+                <span>414.881.9604</span>
+              </div>
 
-                <div class="phone">
-                    <span>414.881.9604</span>
-                </div>
-
-                <div class="website">
-                    <span><a href="https://www.davidcalabrese.org/">DavidCalabrese.org</a></span>
+              <div class="website">
+                <span><a href="https://www.davidcalabrese.org/">DavidCalabrese.org</a></span>
               </div>
             </div>
 
         </div> <!-- end .header -->
 
         <section class="education">
-            <div class="section-title">
-                <h2>Education</h2>
-            </div>
-
-            <div class="associate">
-                <p class="degree-title"><b>Associate Degree in Web Software Development</b>
-                  <span class="float-right grad-date">Anticipated Graduation Date - May 2022</span>
-                </p>
-                <p class="school-name">Madison College</p>
-            </div>
-
-            <div class="bachelor">
-                <p class="degree-title"><b>Bachelor of Arts in Comparative Literature	</b>
-                  <span class="float-right grad-date">December 2016</span>
-                </p>   
-                <p class="school-name">University of Wisconsin-Milwaukee</p>
+          <div class="section-title">
+            <h2>Education</h2>
           </div>
-      
 
-          </section> <!-- end .education -->
+          <div class="associate">
+            <p class="degree-title"><b>Associate Degree in Web Software Development</b>
+              <span class="float-right grad-date">Anticipated Graduation Date - May 2022</span>
+            </p>
+            <p class="school-name">Madison College</p>
+          </div>
+
+          <div class="bachelor">
+            <p class="degree-title"><b>Bachelor of Arts in Comparative Literature	</b>
+              <span class="float-right grad-date">December 2016</span>
+            </p>   
+            <p class="school-name">University of Wisconsin-Milwaukee</p>
+          </div>
+        </section> <!-- end .education -->
 
         <section class="skills">
-            <div class="section-title">
-                <h2>Skills</h2>
-            </div>
+          <div class="section-title">
+            <h2>Skills</h2>
+          </div>
 
-            <div class="skills-container">
-              <ul class="skill-list">
-                <li>Java, Jakarta EE</li>
-                <li>JavaScript, Node.js</li>
-                <li>HTML, CSS, Sass</li>
-                <li>MySQL, Oracle, Postgres</li>
-                <li>Python, Flask</li>
-                <li>Git, Github, Git Flow</li>
-                <li>Linux, Shell Scripting</li>
-                <li>Cloud & Container</li>
-                <li>PHP</li>
-                <li>Postman, API Development</li>
-              </ul>
-            </div>
-          </section> <!-- end .skills -->
+          <div class="skills-container">
+            <ul class="skill-list">
+              <li>Java, Jakarta EE</li>
+              <li>JavaScript, Node.js</li>
+              <li>HTML, CSS, Sass</li>
+              <li>MySQL, Oracle, Postgres</li>
+              <li>Python, Flask</li>
+              <li>Git, Github, Git Flow</li>
+              <li>Linux, Shell Scripting</li>
+              <li>Cloud & Container</li>
+              <li>PHP</li>
+              <li>Postman, API Development</li>
+            </ul>
+          </div>
+        </section> <!-- end .skills -->
 
-        <div class="projects">
+        <section class="projects">
             <div class="section-title">
                 <h2>Projects</h2>
             </div>
@@ -112,7 +110,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                   <li><span class="description">A full-stack, IoT weather alert app built in Node ⚠️</span><span class="float-right">
                     <a href="https://github.com/davidtcalabrese/ISWAM" target="_blank">ISWAM</a> </span>
                   </li>
-                  <li><span class="description">An expense tracker app built in React 💸</span><span class="float-right">
+                  <li><span class="description">An app for tracking expenses built with React 💸</span><span class="float-right">
                     <a href="https://github.com/davidtcalabrese/ISWAM" target="_blank">Keep $core</a> </span>
                   </li>
                   <li><span class="description">Sorting game using the HTML drag-and-drop API 🌆</span><span class="float-right"> 
@@ -125,17 +123,31 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                     <a href="https://github.com/davidtcalabrese/todo-app" target="_blank">To Do App</a> </span>
                   </li>
                 </ul>
-        </div> <!-- end .projects -->
+        </section> <!-- end .projects -->
 
-        <div class="experience">
+        <section class="experience">
             <div class="section-title">
                 <h2>Experience</h2>
+            </div>
+
+            <div class="dpi">
+              <p class="job-title"><b>IT Guide (Tutor)</b>
+                <span class="float-right">January 2022 - Present</span>
+              </p>
+              <p class="employer">Madison College</p>
+              <div class="job-bullets">
+                <ul>
+                  <li>Assisted students in IT programs with class work</li>
+                  <li>Provided troubleshooting, research and programming assistance</li>
+                </ul>
+              </div>
             </div>
 
             <div class="dpi">
               <p class="job-title"><b>Operations Associate</b>
                 <span class="float-right">January 2020 - February 2021</span>
               </p>
+              <p class="employer">Wisconsin Department of Public Instruction</p>
               <div class="job-bullets">
                 <ul>
                   <li>Supported office in communications and technology</li>
@@ -149,6 +161,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               <p class="job-title"><b>Eligibility Specialist</b>
                 <span class="float-right">August 2019 - January 2020</span>
               </p>
+              <p class="employer">MAXIMUS</p>
               <div class="job-bullets">
                 <ul>
                   <li>Determining Title IV-E Eligibility and making recommendations as to case’s eligibility</li>
@@ -160,6 +173,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               <p class="job-title"><b>Parks Worker</b>
                 <span class="float-right">May 2018 - August 2019</span>
               </p>
+              <p class="employer">City of Madison</p>
               <div class="job-bullets">
                 <ul>
                   <li>Building, inspecting, repairing, and maintaining playgrounds</li>
@@ -167,7 +181,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               </div>
             </div>
 
-        </div> <!-- end .experience -->
+        </section> <!-- end .experience -->
 
         <div class="download">
           <form action="/Resume-12-21.pdf" method="get">
@@ -177,7 +191,6 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
      
     </div> <!-- end .container-->
     </main>
-
     <footer include-html="includes/footer.html"></footer>
     <script src="js/includeHTML.js"></script>
     <script>includeHTML();</script>
