--- a/projects.html
+++ b/projects.html
@@ -35,8 +35,8 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
     <main class="container">
 
-      <section class="intro">
-        <p>Here are a few of the projects I've done. Most of them are hosted live on GitHub pages as well. For those hosted live, click the picture to see the page. Click the description to see the repository</p>
+      <section class="intro max-seven">
+        <p>Here are a few of the projects I've done. Some are hosted live on GitHub pages. For those hosted live, click the picture for the page. Click the description to see the repo.</p>
       </section>
 
       <section class="cards">
