--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
       <div include-html="includes/banner.html"></div>
     </header>
     
-    <main class="container">
+    <main class="container-md" >
         <br>
-        <div class="introduction">
+        <div class="introduction max-seven">
             <p>My name is David Calabrese. I am currently a student at Madison College in Madison, WI. I will finish the <a href="https://madisoncollege.edu/academics/programs/web-software-developer">Web Software Development program</a> in May of 2022.</p>
             
             <p>I was born and raised in nearby Milwaukee and attended the University of Wisconsin-Milwaukee. I am very excited to begin a career as a developer and I look forward to putting all of the skills I have picked up to use at a business or non-profit. During my last two semesters at Madison College I will continue creating web apps and sharing the final project on this website, so be sure to check back soon!</p>
