--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
     <main class="container">
 
-      <div class="introduction">
+      <div class="introduction max-seven">
         <h3>Get in touch!</h3>
         <p>Looking for a skilled web developer to hire? Want to get together for coffee and a chat? Have a great idea to pitch? </p>
         <p>You can find my contact information on the <a href="https://www.davidcalabrese.org/resume">resume page</a>. You can also submit this form and I'll get back to you ASAP.</p>
