update graduation in resume

--- a/resume.html
+++ b/resume.html
@@ -68,7 +68,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
           <div class="associate">
             <p class="degree-title"><b>Associate Degree in Web Software Development</b>
-              <span class="float-right grad-date">Anticipated Graduation Date - May 2022</span>
+              <span class="float-right grad-date">May 2022</span>
             </p>
             <p class="school-name">Madison College</p>
           </div>
