--- a/resume.html
+++ b/resume.html
@@ -110,8 +110,11 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                   <li><span class="description">A full-stack, IoT weather alert app built in Node ⚠️</span><span class="float-right">
                     <a href="https://github.com/davidtcalabrese/ISWAM" target="_blank">ISWAM</a> </span>
                   </li>
+                  <li><span class="description">Live blog built with AWS, Java servlets and JSPs 🦦</span><span class="float-right">
+                    <a href="https://github.com/davidtcalabrese/Otter" target="_blank">Otter</a> </span>
+                  </li>
                   <li><span class="description">An app for tracking expenses built with React 💸</span><span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/ISWAM" target="_blank">Keep $core</a> </span>
+                    <a href="https://github.com/davidtcalabrese/expense-tracker" target="_blank">Keep $core</a> </span>
                   </li>
                   <li><span class="description">Sorting game built with the drag-and-drop API 🌆</span><span class="float-right"> 
                     <a href="https://github.com/davidtcalabrese/sort-game" target="_blank">City Sort</a> </span>
