--- a/resume.html
+++ b/resume.html
@@ -88,9 +88,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
           <div class="skills-container">
             <ul class="skill-list">
-              <li>Java, Jakarta EE</li>
-              <li>JavaScript, Node.js</li>
-              <li>HTML, CSS, Sass</li>
+              <li>Java, Java EE</li>
+              <li>Node.js, Express, React</li>
+              <li>HTML, CSS, JavaScript</li>
               <li>MySQL, Oracle, Postgres</li>
               <li>Python, Flask</li>
               <li>Git, Github, Git Flow</li>
