updated end date for IT guide job

--- a/resume.html
+++ b/resume.html
@@ -135,7 +135,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
             <div class="dpi">
               <p class="job-title"><b>IT Guide (Tutor)</b>
-                <span class="float-right">January 2022 - Present</span>
+                <span class="float-right">January 2022 - May 2022</span>
               </p>
               <p class="employer">Madison College</p>
               <div class="job-bullets">
