--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/projects.css" />
-    <title>David Calabrese | Web Developer | For Hire</title>
+    <title>Projects | David Calabrese | Web Developer | For Hire</title>
   </head>
 
   <body>
