--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Personal website of David Calabrese, software engineer." />
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap js bundle -->
@@ -24,7 +25,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/about.css" />
-    <title>David Calabrese | Web Developer | For Hire</title>
+    <title>About | David Calabrese | Web Developer | For Hire</title>
   </head>
 
   <body>
