add otter card to project page

--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,24 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
       <section class="cards">
 
+        <article class="card short">
+          <a href="http://blogenv2-env.eba-zg5dcynj.us-east-2.elasticbeanstalk.com/">
+            <picture class="thumbnail">
+              <img class="h-100" src="img/project_screengrabs/otter.jpg" alt="Otter blog" />
+            </picture>
+          </a>
+            <a href="https://github.com/davidtcalabrese/Otter">
+              <div class="card-content">
+                <h2>Otter</h2>
+                <p>
+                  Blog built in Java with servlets and JSPs. Generates articles for lazy writers via the OpenAI API. Hosted on AWS. SSL Certificate is self-signed but I promise its safe.  
+                </p>
+              </div>
+            <!-- .card-content -->
+            </a>
+        </article>
+        <!-- .card -->
+
         <article class="card">
             <picture class="thumbnail">
               <img src="img/ISWAM-5.PNG" alt="ISWAM home" id="iswam-img"/>
