--- a/projects.html
+++ b/projects.html
@@ -54,11 +54,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <p>
                   Blog built in Java with servlets and JSPs. Generates articles for lazy writers via the OpenAI API. Hosted on AWS. SSL Certificate is self-signed but I promise its safe.  
                 </p>
-              </div>
-            <!-- .card-content -->
+              </div><!-- .card-content -->
             </a>
-        </article>
-        <!-- .card -->
+        </article><!-- .card -->
 
         <article class="card">
             <picture class="thumbnail">
@@ -70,15 +68,13 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <p>
                   The IoT Severe Weather Alert Monitor. A full stack JavaScript/Node application that calls APIs for current weather data and NWS alerts and sends them to the browser and an IoT device. No live version on GitHub pages.
                 </p>
-              </div>
-            <!-- .card-content -->
-        </article>
-        <!-- .card -->
+              </div><!-- .card-content -->
+        </article><!-- .card -->
 
         <article class="card" id="tax">
           <a href="https://davidtcalabrese.github.io/tax-calculator/">
             <picture class="thumbnail">
-              <img class="h-100" src="img/tax-calculator-screenshot.PNG" alt="tax calculator" />
+              <img class="h-100" src="img/project_screengrabs/tax_calc.jpg" alt="tax calculator" />
             </picture>
           </a>
           <a href="https://github.com/davidtcalabrese/tax-calculator">
@@ -87,16 +83,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <p>
                   Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see how much of it will end up going to Uncle Sam as well as a breakdown of where the different taxes are going. 
                 </p>
-              </div>
-            <!-- .card-content -->
+              </div><!-- .card-content -->
           </a>
-        </article>
-        <!-- .card -->
+        </article><!-- .card -->
 
         <article class="card short">
           <a href="https://davidtcalabrese.github.io/dad-jokes/">
             <picture class="thumbnail">
-              <img class="h-100" src="img/dad-jokes-screenshot.PNG" alt="dad jokes" />
+              <img class="h-100" src="img/project_screengrabs/dad_jokes.PNG" alt="dad jokes" />
             </picture>
           </a>
             <a href="https://github.com/davidtcalabrese/dad-jokes">
@@ -105,11 +99,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <p>
                   This is a site I made using JavaScript async/await to pull in jokes from an API (icanhazdadjoke). I'm a fan of Phil Dunphy, Ty Burrell's character on Modern Family, so I added him for good measure. 
                 </p>
-              </div>
-            <!-- .card-content -->
+              </div><!-- .card-content -->
             </a>
-        </article>
-        <!-- .card -->
+        </article><!-- .card -->
 
         <article class="card">
             <picture class="thumbnail">
@@ -121,16 +113,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               <p>
                 The obligatory todo app that all novice programmers have to make. This was created with PHP and MySQL. No live version on GitHub Pages.    
               </p>
-            </div>
-            <!-- .card-content -->
+            </div><!-- .card-content -->
           </a>
-        </article>
-        <!-- .card -->
+        </article><!-- .card -->
 
         <article class="card">
           <a href="https://davidtcalabrese.github.io/sort-game/">
             <picture class="thumbnail">
-                <img class="h-100" src="img/city-sort-1248-866.png" alt="city sort" />
+                <img class="h-100" src="img/project_screengrabs/city_sort.png" alt="city sort" />
             </picture>
           </a>
           <a href="https://github.com/davidtcalabrese/sort-game">
@@ -139,16 +129,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               <p>
                 This is a sorting game I made using JavaScript and the drag and drop API. 
               </p>
-            </div>
-            <!-- .card-content -->
+            </div><!-- .card-content -->
           </a>
-        </article>
-        <!-- .card -->
+        </article><!-- .card -->
 
         <article class="card">
           <a href="https://davidtcalabrese.github.io/expense-tracker/">
             <picture class="thumbnail">
-              <img src="img/expense-tracker-1182_866.png" alt="expense tracker screen grab" />
+              <img src="img/project_screengrabs/expense_tracker.png" alt="expense tracker screen grab" />
             </picture>
           </a>
           <a href="https://github.com/davidtcalabrese/expense-tracker">
@@ -157,16 +145,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               <p>
                 This is a straightforward React application intended to help people track income and expenses.   
               </p>
-            </div>
-            <!-- .card-content -->
+            </div><!-- .card-content -->
           </a>
-        </article>
-        <!-- .card -->
+        </article><!-- .card -->
 
         <article class="card">
           <a href="https://www.davidcalabrese.org">
             <picture class="thumbnail">
-              <img src="img/personal-website-screengrab.PNG" alt="personal website" />
+              <img src="img/project_screengrabs/personal_site.jpg" alt="personal website" />
             </picture>
           </a>
           <a href="https://github.com/davidtcalabrese/website">
@@ -175,11 +161,9 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               <p>
                 The website you're on now! Custom built and designed to showcase projects and resume. 
               </p>
-            </div>
-            <!-- .card-content -->
+            </div><!-- .card-content -->
           </a>
-        </article>
-        <!-- .card -->
+        </article><!-- .card -->
 
       </section>
     </main>
