--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
     </header>
 
 
-    <main class="container-xl" id="main">
+    <main class="container-xl d-flex flex-column align-items-center justify-content-center" id="main">
       <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3 max-seven">
         <h3 class="mb-3">Thanks for coming to visit!</h3>
         <p class="lead">This site features a number of my portfolio projects as well as a resume and other contact information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
