--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
         <article class="card">
             <picture class="thumbnail">
-              <img src="img/ISWAM-5.PNG" alt="ISWAM home" id="iswam-img"/>
+              <img src="img/project_screengrabs/ISWAM.PNG" alt="ISWAM home" id="iswam-img"/>
             </picture>
           <a href="https://github.com/davidtcalabrese/ISWAM">
               <div class="card-content">
@@ -105,7 +105,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 
         <article class="card">
             <picture class="thumbnail">
-              <img src="img/to-do-2.PNG" alt="todo app" />
+              <img src="img/project_screengrabs/to-do-2.PNG" alt="todo app" />
             </picture>
           <a href="https://github.com/davidtcalabrese/todo-app">
             <div class="card-content">
