--- a/resume.html
+++ b/resume.html
@@ -134,7 +134,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                 <h2>Experience</h2>
             </div>
 
-            <div class="dpi">
+            <div>
               <p class="job-title"><b>IT Guide (Tutor)</b>
                 <span class="float-right">January 2022 - May 2022</span>
               </p>
