add singlewire internship to resume

--- a/resume.html
+++ b/resume.html
@@ -135,6 +135,18 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             </div>
 
             <div>
+              <p class="job-title"><b>Software Engineer Intern</b>
+                <span class="float-right">May 2022 - Present</span>
+              </p>
+              <p class="employer">Singlewire Software</p>
+              <div class="job-bullets">
+                <ul>
+                  <li>Assisted team in maintaining InformaCast</li>
+                </ul>
+              </div>
+            </div>
+
+            <div>
               <p class="job-title"><b>IT Guide (Tutor)</b>
                 <span class="float-right">January 2022 - May 2022</span>
               </p>
