remove "git flow" skill

--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               <li>HTML, CSS, JavaScript</li>
               <li>MySQL, Oracle, Postgres</li>
               <li>Python, Flask</li>
-              <li>Git, Github, Git Flow</li>
+              <li>Git, Github</li>
               <li>Linux, Shell Scripting</li>
               <li>Cloud & Container</li>
               <li>PHP</li>
