replace b tags with font weight styles

--- a/resume.html
+++ b/resume.html
@@ -68,14 +68,14 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
           </div>
 
           <div class="associate">
-            <p class="degree-title"><b>Associate Degree in Web Software Development</b>
+            <p class="degree-title">Associate Degree in Web Software Development
               <span class="float-right grad-date">May 2022</span>
             </p>
             <p class="school-name">Madison College</p>
           </div>
 
           <div class="bachelor">
-            <p class="degree-title"><b>Bachelor of Arts in Comparative Literature	</b>
+            <p class="degree-title">Bachelor of Arts in Comparative Literature	
               <span class="float-right grad-date">December 2016</span>
             </p>   
             <p class="school-name">University of Wisconsin-Milwaukee</p>
@@ -135,7 +135,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             </div>
 
             <div>
-              <p class="job-title"><b>Software Engineer Intern</b>
+              <p class="job-title">Software Engineer Intern
                 <span class="float-right">May 2022 - Present</span>
               </p>
               <p class="employer">Singlewire Software</p>
@@ -147,7 +147,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             </div>
 
             <div>
-              <p class="job-title"><b>IT Guide (Tutor)</b>
+              <p class="job-title">IT Guide (Tutor)
                 <span class="float-right">January 2022 - May 2022</span>
               </p>
               <p class="employer">Madison College</p>
@@ -160,7 +160,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             </div>
 
             <div class="dpi">
-              <p class="job-title"><b>Operations Associate</b>
+              <p class="job-title">Operations Associate
                 <span class="float-right">January 2020 - February 2021</span>
               </p>
               <p class="employer">Wisconsin Department of Public Instruction</p>
@@ -174,7 +174,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             </div>
 
             <div class="dcf">
-              <p class="job-title"><b>Eligibility Specialist</b>
+              <p class="job-title">Eligibility Specialist
                 <span class="float-right">August 2019 - January 2020</span>
               </p>
               <p class="employer">MAXIMUS</p>
