add new job to resume

--- a/resume.html
+++ b/resume.html
@@ -135,8 +135,20 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
             </div>
 
             <div>
+              <p class="job-title">Software Engineer
+                <span class="float-right">August 2022 - Present</span>
+              </p>
+              <p class="employer">Singlewire Software</p>
+              <div class="job-bullets">
+                <ul>
+                  <li>Assisted team in building, maintaining InformaCast</li>
+                </ul>
+              </div>
+            </div>
+
+            <div>
               <p class="job-title">Software Engineer Intern
-                <span class="float-right">May 2022 - Present</span>
+                <span class="float-right">May 2022 - August 2022</span>
               </p>
               <p class="employer">Singlewire Software</p>
               <div class="job-bullets">
@@ -167,26 +179,13 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
               <div class="job-bullets">
                 <ul>
                   <li>Supported office in communications and technology</li>
-                  <li>Assembled weekly report of customer service data</li>
                   <li>Maintained website with Drupal</li>
                 </ul>
               </div>
             </div>
-
-            <div class="dcf">
-              <p class="job-title">Eligibility Specialist
-                <span class="float-right">August 2019 - January 2020</span>
-              </p>
-              <p class="employer">MAXIMUS</p>
-              <div class="job-bullets">
-                <ul>
-                  <li>Determining Title IV-E Eligibility and making recommendations as to case’s eligibility</li>
-                </ul>
-              </div>
-            </div>
-
         </section> <!-- end .experience -->     
     </div> <!-- end .container-->
+
     </main>
     <div class="download mt-4">
       <form action="/Resume-6-22.pdf" method="get">
@@ -200,3 +199,4 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
 </html>
 
 
+C:\Users\david\OneDrive\sites\davidcalabrese_org\projects.html
