Add in dark mode option

--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,7 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
         <p>You can find my contact information on the <a href="https://www.davidcalabrese.org/resume">resume page</a>. You can also submit this form and I'll get back to you ASAP.</p>
       </div>
 
-        <div class="form">
-
+        <div class="contact-form">
             <form action="https://formspree.io/f/mbjqwnne"
                   method="POST"
                   name="EmailForm">   
