--- a/index.html
+++ b/index.html
@@ -6,46 +6,55 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                         ___Y  ,    .'7 /|
                       (_,___/...-` (_/_/ -->
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Personal website of David Calabrese, software engineer." />
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- bootstrap js bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Poly&family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
-    <!-- font awesome icons -->
-    <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
-    <link rel="alternate icon" href="img/favicon.ico" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/index.css" />
-    <title>David Calabrese | Web Developer | For Hire</title>
-  </head>
 
-  <body>
-    <header>
-      <nav include-html="includes/navigation.html"></nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Personal website of David Calabrese, software engineer." />
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- bootstrap js bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Poly&family=Raleway:wght@300&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+  <!-- font awesome icons -->
+  <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
+  <link rel="alternate icon" href="img/favicon.ico" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/index.css" />
+  <title>David Calabrese | Web Developer | For Hire</title>
+</head>
+
+<body>
+  <header>
+    <nav include-html="includes/navigation.html"></nav>
+    <div class="banner-container">
       <div include-html="includes/banner.html"></div>
-    </header>
+    </div>
+  </header>
 
+  <main class="container-xl d-flex flex-column align-items-center justify-content-center" id="main">
+    <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3 max-seven">
+      <h3 class="mb-3">Thanks for coming to visit!</h3>
+      <p class="lead">This site features a number of my portfolio projects as well as a resume and other contact
+        information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For
+        more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank"
+          rel="noreferrer noopener">GitHub</a>.
+      </p>
+    </div>
+  </main>
 
-    <main class="container-xl d-flex flex-column align-items-center justify-content-center" id="main">
-      <div class="large-text mx-sm-3 mx-md-4 mx-lg-2 mx-xl-3 max-seven">
-        <h3 class="mb-3">Thanks for coming to visit!</h3>
-        <p class="lead">This site features a number of my portfolio projects as well as a resume and other contact information for employers to find and hire me. Let me know what you think and don't hesitate to reach out! For more work, check out my <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">GitHub</a>.
-        </p>
-      </div>
-    </main>
+  <footer include-html="includes/footer.html"></footer>
+  <script src="js/includeHTML.js"></script>
+  <script>includeHTML();</script>
+  <script src="js/script.js"></script>
+</body>
 
-    <footer include-html="includes/footer.html"></footer>
-    <script src="js/includeHTML.js"></script>
-    <script>includeHTML();</script>
-    <script src="js/script.js"></script>
-  </body>
 </html>
-
