--- a/projects.html
+++ b/projects.html
@@ -6,170 +6,181 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                         ___Y  ,    .'7 /|
                       (_,___/...-` (_/_/ -->
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Personal website of David Calabrese, software engineer." />
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- bootstrap js bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Poly&family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
-    <!-- font awesome icons -->
-    <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
-    <link rel="alternate icon" href="img/favicon.ico" />
-    <script src="js/script.js" defer></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/projects.css" />
-    <title>Projects | David Calabrese | Web Developer | For Hire</title>
-  </head>
 
-  <body>
-    <header>
-      <nav include-html="includes/navigation.html"></nav>
-      <div include-html="includes/banner.html"></div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Personal website of David Calabrese, software engineer." />
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- bootstrap js bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Poly&family=Raleway:wght@300&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+  <!-- font awesome icons -->
+  <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
+  <link rel="alternate icon" href="img/favicon.ico" />
+  <script src="js/script.js" defer></script>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/projects.css" />
+  <title>Projects | David Calabrese | Web Developer | For Hire</title>
+</head>
 
-    <main class="container">
+<body>
+  <header>
+    <nav include-html="includes/navigation.html"></nav>
+    <div include-html="includes/banner.html"></div>
+  </header>
 
-      <section class="intro max-seven">
-        <p>Here are a few of the projects I've done. Some are hosted live on GitHub pages. For those hosted live, click the picture for the page. Click the description to see the repo.</p>
-      </section>
+  <main class="container">
 
-      <section class="cards">
+    <section class="intro max-seven">
+      <p>Here are a few of the projects I've done. Some are hosted live on GitHub pages. For those hosted live, click
+        the picture for the page. Click the description to see the repo.</p>
+    </section>
 
-        <article class="card short">
-            <picture class="thumbnail">
-              <img class="h-100" src="img/project_screengrabs/otter.jpg" alt="Otter blog" />
-            </picture>
-            <a href="https://github.com/davidtcalabrese/Otter">
-              <div class="card-content">
-                <h2>Otter</h2>
-                <p>
-                  Blog built in Java with servlets and JSPs. Generates articles for lazy writers via the OpenAI API. Hosted on AWS. SSL Certificate is self-signed but I promise its safe.  
-                </p>
-              </div><!-- .card-content -->
-            </a>
-        </article><!-- .card -->
+    <section class="cards">
 
-        <article class="card">
-            <picture class="thumbnail">
-              <img src="img/project_screengrabs/ISWAM.PNG" alt="ISWAM home" id="iswam-img"/>
-            </picture>
-          <a href="https://github.com/davidtcalabrese/ISWAM">
-              <div class="card-content">
-                <h2>ISWAM</h2>
-                <p>
-                  The IoT Severe Weather Alert Monitor. A full stack JavaScript/Node application that calls APIs for current weather data and NWS alerts and sends them to the browser and an IoT device. No live version on GitHub pages.
-                </p>
-              </div><!-- .card-content -->
-        </article><!-- .card -->
+      <article class="card short">
+        <picture class="thumbnail">
+          <img class="h-100" src="img/project_screengrabs/otter.jpg" alt="Otter blog" />
+        </picture>
+        <a href="https://github.com/davidtcalabrese/Otter">
+          <div class="card-content">
+            <h2>Otter</h2>
+            <p>
+              Blog built in Java with servlets and JSPs. Generates articles for lazy writers via the OpenAI API. Hosted
+              on AWS. SSL Certificate is self-signed but I promise its safe.
+            </p>
+          </div><!-- .card-content -->
+        </a>
+      </article><!-- .card -->
 
-        <article class="card" id="tax">
-          <a href="https://davidtcalabrese.github.io/tax-calculator/">
-            <picture class="thumbnail">
-              <img class="h-100" src="img/project_screengrabs/tax_calc.jpg" alt="tax calculator" />
-            </picture>
-          </a>
-          <a href="https://github.com/davidtcalabrese/tax-calculator">
-              <div class="card-content">
-                <h2>Tax Calculator</h2>
-                <p>
-                  Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see how much of it will end up going to Uncle Sam as well as a breakdown of where the different taxes are going. 
-                </p>
-              </div><!-- .card-content -->
-          </a>
-        </article><!-- .card -->
+      <article class="card">
+        <picture class="thumbnail">
+          <img src="img/project_screengrabs/ISWAM.PNG" alt="ISWAM home" id="iswam-img" />
+        </picture>
+        <a href="https://github.com/davidtcalabrese/ISWAM">
+          <div class="card-content">
+            <h2>ISWAM</h2>
+            <p>
+              The IoT Severe Weather Alert Monitor. A full stack JavaScript/Node application that calls APIs for current
+              weather data and NWS alerts and sends them to the browser and an IoT device. No live version on GitHub
+              pages.
+            </p>
+          </div><!-- .card-content -->
+      </article><!-- .card -->
 
-        <article class="card short">
-          <a href="https://davidtcalabrese.github.io/dad-jokes/">
-            <picture class="thumbnail">
-              <img class="h-100" src="img/project_screengrabs/dad_jokes.PNG" alt="dad jokes" />
-            </picture>
-          </a>
-            <a href="https://github.com/davidtcalabrese/dad-jokes">
-              <div class="card-content">
-                <h2>Dad Jokes</h2>
-                <p>
-                  This is a site I made using JavaScript async/await to pull in jokes from an API (icanhazdadjoke). I'm a fan of Phil Dunphy, Ty Burrell's character on Modern Family, so I added him for good measure. 
-                </p>
-              </div><!-- .card-content -->
-            </a>
-        </article><!-- .card -->
+      <article class="card" id="tax">
+        <a href="https://davidtcalabrese.github.io/tax-calculator/">
+          <picture class="thumbnail">
+            <img class="h-100" src="img/project_screengrabs/tax_calc.jpg" alt="tax calculator" />
+          </picture>
+        </a>
+        <a href="https://github.com/davidtcalabrese/tax-calculator">
+          <div class="card-content">
+            <h2>Tax Calculator</h2>
+            <p>
+              Using JavaScript and chart.js, this tax calculator tool allows users to enter expected income and see how
+              much of it will end up going to Uncle Sam as well as a breakdown of where the different taxes are going.
+            </p>
+          </div><!-- .card-content -->
+        </a>
+      </article><!-- .card -->
 
-        <article class="card">
-            <picture class="thumbnail">
-              <img src="img/project_screengrabs/to-do-2.PNG" alt="todo app" />
-            </picture>
-          <a href="https://github.com/davidtcalabrese/todo-app">
-            <div class="card-content">
-              <h2>Todo App</h2>
-              <p>
-                The obligatory todo app that all novice programmers have to make. This was created with PHP and MySQL. No live version on GitHub Pages.    
-              </p>
-            </div><!-- .card-content -->
-          </a>
-        </article><!-- .card -->
+      <article class="card short">
+        <a href="https://davidtcalabrese.github.io/dad-jokes/">
+          <picture class="thumbnail">
+            <img class="h-100" src="img/project_screengrabs/dad_jokes.PNG" alt="dad jokes" />
+          </picture>
+        </a>
+        <a href="https://github.com/davidtcalabrese/dad-jokes">
+          <div class="card-content">
+            <h2>Dad Jokes</h2>
+            <p>
+              This is a site I made using JavaScript async/await to pull in jokes from an API (icanhazdadjoke). I'm a
+              fan of Phil Dunphy, Ty Burrell's character on Modern Family, so I added him for good measure.
+            </p>
+          </div><!-- .card-content -->
+        </a>
+      </article><!-- .card -->
 
-        <article class="card">
-          <a href="https://davidtcalabrese.github.io/sort-game/">
-            <picture class="thumbnail">
-                <img class="h-100" src="img/project_screengrabs/city_sort.png" alt="city sort" />
-            </picture>
-          </a>
-          <a href="https://github.com/davidtcalabrese/sort-game">
-            <div class="card-content">
-              <h2>City Sort Game</h2>
-              <p>
-                This is a sorting game I made using JavaScript and the drag and drop API. 
-              </p>
-            </div><!-- .card-content -->
-          </a>
-        </article><!-- .card -->
+      <article class="card">
+        <picture class="thumbnail">
+          <img src="img/project_screengrabs/to-do-2.PNG" alt="todo app" />
+        </picture>
+        <a href="https://github.com/davidtcalabrese/todo-app">
+          <div class="card-content">
+            <h2>Todo App</h2>
+            <p>
+              The obligatory todo app that all novice programmers have to make. This was created with PHP and MySQL. No
+              live version on GitHub Pages.
+            </p>
+          </div><!-- .card-content -->
+        </a>
+      </article><!-- .card -->
 
-        <article class="card">
-          <a href="https://davidtcalabrese.github.io/expense-tracker/">
-            <picture class="thumbnail">
-              <img src="img/project_screengrabs/expense_tracker.png" alt="expense tracker screen grab" />
-            </picture>
-          </a>
-          <a href="https://github.com/davidtcalabrese/expense-tracker">
-            <div class="card-content">
-              <h2>Expense Tracker</h2>
-              <p>
-                This is a straightforward React application intended to help people track income and expenses.   
-              </p>
-            </div><!-- .card-content -->
-          </a>
-        </article><!-- .card -->
+      <article class="card">
+        <a href="https://davidtcalabrese.github.io/sort-game/">
+          <picture class="thumbnail">
+            <img class="h-100" src="img/project_screengrabs/city_sort.png" alt="city sort" />
+          </picture>
+        </a>
+        <a href="https://github.com/davidtcalabrese/sort-game">
+          <div class="card-content">
+            <h2>City Sort Game</h2>
+            <p>
+              This is a sorting game I made using JavaScript and the drag and drop API.
+            </p>
+          </div><!-- .card-content -->
+        </a>
+      </article><!-- .card -->
 
-        <article class="card">
-          <a href="https://www.davidcalabrese.org">
-            <picture class="thumbnail">
-              <img src="img/project_screengrabs/personal_site.jpg" alt="personal website" />
-            </picture>
-          </a>
-          <a href="https://github.com/davidtcalabrese/website">
-            <div class="card-content">
-              <h2>Personal Website</h2>
-              <p>
-                The website you're on now! Custom built and designed to showcase projects and resume. 
-              </p>
-            </div><!-- .card-content -->
-          </a>
-        </article><!-- .card -->
+      <article class="card">
+        <a href="https://davidtcalabrese.github.io/expense-tracker/">
+          <picture class="thumbnail">
+            <img src="img/project_screengrabs/expense_tracker.png" alt="expense tracker screen grab" />
+          </picture>
+        </a>
+        <a href="https://github.com/davidtcalabrese/expense-tracker">
+          <div class="card-content">
+            <h2>Expense Tracker</h2>
+            <p>
+              This is a straightforward React application intended to help people track income and expenses.
+            </p>
+          </div><!-- .card-content -->
+        </a>
+      </article><!-- .card -->
 
-      </section>
-    </main>
+      <article class="card">
+        <a href="https://www.davidcalabrese.org">
+          <picture class="thumbnail">
+            <img src="img/project_screengrabs/personal_site.jpg" alt="personal website" />
+          </picture>
+        </a>
+        <a href="https://github.com/davidtcalabrese/website">
+          <div class="card-content">
+            <h2>Personal Website</h2>
+            <p>
+              The website you're on now! Custom built and designed to showcase projects and resume.
+            </p>
+          </div><!-- .card-content -->
+        </a>
+      </article><!-- .card -->
 
-    <footer include-html="includes/footer.html"></footer>
-    <script src="js/includeHTML.js"></script>
-    <script>includeHTML();</script>
-  </body>
+    </section>
+  </main>
+
+  <footer include-html="includes/footer.html"></footer>
+  <script src="js/includeHTML.js"></script>
+  <script>includeHTML();</script>
+</body>
+
 </html>
-
-
