--- a/resume.html
+++ b/resume.html
@@ -6,194 +6,207 @@ Date: 08/28/2021         "") `"` DC  \  ((`"`
                         ___Y  ,    .'7 /|
                       (_,___/...-` (_/_/ -->
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Personal website of David Calabrese, software engineer." />
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- bootstrap js bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Poly&family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Outfit:wght@300&family=Poly&family=Raleway:wght@100&display=swap" rel="stylesheet">
-    <!-- font awesome icons -->
-    <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
-    <link rel="alternate icon" href="img/favicon.ico" />
-    <script src="js/script.js" defer></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/resume.css" />
-    <title>David Calabrese | Web Developer | For Hire</title>
-  </head>
 
-  <body>
-    <header>
-      <nav include-html="includes/navigation.html"></nav>
-      <div include-html="includes/banner.html"></div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Personal website of David Calabrese, software engineer." />
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- bootstrap js bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Poly&family=Raleway:wght@300&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Outfit:wght@300&family=Poly&family=Raleway:wght@100&display=swap"
+    rel="stylesheet">
+  <!-- font awesome icons -->
+  <script src="https://kit.fontawesome.com/3da1a747b2.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
+  <link rel="alternate icon" href="img/favicon.ico" />
+  <script src="js/script.js" defer></script>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/resume.css" />
+  <title>David Calabrese | Web Developer | For Hire</title>
+</head>
 
-    <main class="container" id="main">
-      <div class="container">
-        <div class="header">
-            <div class="title">
-              <h1>David Calabrese</h1>
-            </div>
+<body>
+  <header>
+    <nav include-html="includes/navigation.html"></nav>
+    <div include-html="includes/banner.html"></div>
+  </header>
 
-            <div class="contact-info">
-              <div class="email">
-                <a href="mailto:david.thomas.calabrese@gmail.com">david.thomas.calabrese@gmail.com</a>
-              </div>
+  <main class="container" id="main">
+    <div class="container">
+      <div class="header">
+        <div class="title">
+          <h1>David Calabrese</h1>
+        </div>
 
-              <div class="city">
-                <span>Madison, WI</span>
-              </div>
-
-              <div class="phone">
-                <span>414.881.9604</span>
-              </div>
-
-              <div class="website">
-                <span><a href="https://www.davidcalabrese.org/">DavidCalabrese.org</a></span>
-              </div>
-            </div>
-
-        </div> <!-- end .header -->
-
-        <section class="education">
-          <div class="section-title">
-            <h2>Education</h2>
+        <div class="contact-info">
+          <div class="email">
+            <a href="mailto:david.thomas.calabrese@gmail.com">david.thomas.calabrese@gmail.com</a>
           </div>
 
-          <div class="associate">
-            <p class="degree-title">Associate Degree in Web Software Development
-              <span class="float-right grad-date">May 2022</span>
-            </p>
-            <p class="school-name">Madison College</p>
+          <div class="city">
+            <span>Madison, WI</span>
           </div>
 
-          <div class="bachelor">
-            <p class="degree-title">Bachelor of Arts in Comparative Literature	
-              <span class="float-right grad-date">December 2016</span>
-            </p>   
-            <p class="school-name">University of Wisconsin-Milwaukee</p>
-          </div>
-        </section> <!-- end .education -->
-
-        <section class="skills">
-          <div class="section-title">
-            <h2>Skills</h2>
+          <div class="phone">
+            <span>414.881.9604</span>
           </div>
 
-          <div class="skills-container">
-            <ul class="skill-list">
-              <li>Java, Java EE</li>
-              <li>Node.js, Express, React</li>
-              <li>HTML, CSS, JavaScript</li>
-              <li>MySQL, Oracle, Postgres</li>
-              <li>Python, Flask</li>
-              <li>Git, Github</li>
-              <li>Linux, Shell Scripting</li>
-              <li>Cloud & Container</li>
-              <li>PHP</li>
-              <li>Postman, API Development</li>
+          <div class="website">
+            <span><a href="https://www.davidcalabrese.org/">DavidCalabrese.org</a></span>
+          </div>
+        </div>
+
+      </div> <!-- end .header -->
+
+      <section class="education">
+        <div class="section-title">
+          <h2>Education</h2>
+        </div>
+
+        <div class="associate">
+          <p class="degree-title">Associate Degree in Web Software Development
+            <span class="float-right grad-date">May 2022</span>
+          </p>
+          <p class="school-name">Madison College</p>
+        </div>
+
+        <div class="bachelor">
+          <p class="degree-title">Bachelor of Arts in Comparative Literature
+            <span class="float-right grad-date">December 2016</span>
+          </p>
+          <p class="school-name">University of Wisconsin-Milwaukee</p>
+        </div>
+      </section> <!-- end .education -->
+
+      <section class="skills">
+        <div class="section-title">
+          <h2>Skills</h2>
+        </div>
+
+        <div class="skills-container">
+          <ul class="skill-list">
+            <li>Java, Java EE</li>
+            <li>Node.js, Express, React</li>
+            <li>HTML, CSS, JavaScript</li>
+            <li>MySQL, Oracle, Postgres</li>
+            <li>Python, Flask</li>
+            <li>Git, Github</li>
+            <li>Linux, Shell Scripting</li>
+            <li>Cloud & Container</li>
+            <li>PHP</li>
+            <li>Postman, API Development</li>
+          </ul>
+        </div>
+      </section> <!-- end .skills -->
+
+      <section class="projects">
+        <div class="section-title">
+          <h2>Projects</h2>
+        </div>
+        <ul>
+          <li><span class="description">A full-stack, IoT weather alert app built in Node ⚠️</span><span
+              class="float-right">
+              <a href="https://github.com/davidtcalabrese/ISWAM" target="_blank">ISWAM</a> </span>
+          </li>
+          <li><span class="description">Live blog built with AWS, Java servlets and JSPs 🦦</span><span
+              class="float-right">
+              <a href="https://github.com/davidtcalabrese/Otter" target="_blank">Otter</a> </span>
+          </li>
+          <li><span class="description">An app for tracking expenses built with React 💸</span><span
+              class="float-right">
+              <a href="https://github.com/davidtcalabrese/expense-tracker" target="_blank">Keep $core</a> </span>
+          </li>
+          <li><span class="description">Sorting game built with the drag-and-drop API 🌆</span><span
+              class="float-right">
+              <a href="https://github.com/davidtcalabrese/sort-game" target="_blank">City Sort</a> </span>
+          </li>
+          <li><span class="description">Personal site with projects, resume, contact info 👨‍💼</span><span
+              class="float-right">
+              <a href="https://github.com/davidtcalabrese/website" target="_blank">My Site</a> </span>
+          </li>
+          <li><span class="description">The obligatory to-do app, with PHP & MariaDB ☑</span><span class="float-right">
+              <a href="https://github.com/davidtcalabrese/todo-app" target="_blank">To Do App</a> </span>
+          </li>
+        </ul>
+      </section> <!-- end .projects -->
+
+      <section class="experience">
+        <div class="section-title">
+          <h2>Experience</h2>
+        </div>
+
+        <div>
+          <p class="job-title">Software Engineer
+            <span class="float-right">August 2022 - Present</span>
+          </p>
+          <p class="employer">Singlewire Software</p>
+          <div class="job-bullets">
+            <ul>
+              <li>Assisted team in building, maintaining InformaCast</li>
             </ul>
           </div>
-        </section> <!-- end .skills -->
+        </div>
 
-        <section class="projects">
-            <div class="section-title">
-                <h2>Projects</h2>
-            </div>
-                <ul>
-                  <li><span class="description">A full-stack, IoT weather alert app built in Node ⚠️</span><span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/ISWAM" target="_blank">ISWAM</a> </span>
-                  </li>
-                  <li><span class="description">Live blog built with AWS, Java servlets and JSPs 🦦</span><span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/Otter" target="_blank">Otter</a> </span>
-                  </li>
-                  <li><span class="description">An app for tracking expenses built with React 💸</span><span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/expense-tracker" target="_blank">Keep $core</a> </span>
-                  </li>
-                  <li><span class="description">Sorting game built with the drag-and-drop API 🌆</span><span class="float-right"> 
-                    <a href="https://github.com/davidtcalabrese/sort-game" target="_blank">City Sort</a> </span>
-                  </li>
-                  <li><span class="description">Personal site with projects, resume, contact info 👨‍💼</span><span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/website" target="_blank">My Site</a> </span>
-                  </li>
-                  <li><span class="description">The obligatory to-do app, with PHP & MariaDB ☑</span><span class="float-right">
-                    <a href="https://github.com/davidtcalabrese/todo-app" target="_blank">To Do App</a> </span>
-                  </li>
-                </ul>
-        </section> <!-- end .projects -->
+        <div>
+          <p class="job-title">Software Engineer Intern
+            <span class="float-right">May 2022 - August 2022</span>
+          </p>
+          <p class="employer">Singlewire Software</p>
+          <div class="job-bullets">
+            <ul>
+              <li>Assisted team in maintaining InformaCast</li>
+            </ul>
+          </div>
+        </div>
 
-        <section class="experience">
-            <div class="section-title">
-                <h2>Experience</h2>
-            </div>
+        <div>
+          <p class="job-title">IT Guide (Tutor)
+            <span class="float-right">January 2022 - May 2022</span>
+          </p>
+          <p class="employer">Madison College</p>
+          <div class="job-bullets">
+            <ul>
+              <li>Assisted students in IT programs with class work</li>
+              <li>Provided troubleshooting, research and programming assistance</li>
+            </ul>
+          </div>
+        </div>
 
-            <div>
-              <p class="job-title">Software Engineer
-                <span class="float-right">August 2022 - Present</span>
-              </p>
-              <p class="employer">Singlewire Software</p>
-              <div class="job-bullets">
-                <ul>
-                  <li>Assisted team in building, maintaining InformaCast</li>
-                </ul>
-              </div>
-            </div>
-
-            <div>
-              <p class="job-title">Software Engineer Intern
-                <span class="float-right">May 2022 - August 2022</span>
-              </p>
-              <p class="employer">Singlewire Software</p>
-              <div class="job-bullets">
-                <ul>
-                  <li>Assisted team in maintaining InformaCast</li>
-                </ul>
-              </div>
-            </div>
-
-            <div>
-              <p class="job-title">IT Guide (Tutor)
-                <span class="float-right">January 2022 - May 2022</span>
-              </p>
-              <p class="employer">Madison College</p>
-              <div class="job-bullets">
-                <ul>
-                  <li>Assisted students in IT programs with class work</li>
-                  <li>Provided troubleshooting, research and programming assistance</li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="dpi">
-              <p class="job-title">Operations Associate
-                <span class="float-right">January 2020 - February 2021</span>
-              </p>
-              <p class="employer">Wisconsin Department of Public Instruction</p>
-              <div class="job-bullets">
-                <ul>
-                  <li>Supported office in communications and technology</li>
-                  <li>Maintained website with Drupal</li>
-                </ul>
-              </div>
-            </div>
-        </section> <!-- end .experience -->     
+        <div class="dpi">
+          <p class="job-title">Operations Associate
+            <span class="float-right">January 2020 - February 2021</span>
+          </p>
+          <p class="employer">Wisconsin Department of Public Instruction</p>
+          <div class="job-bullets">
+            <ul>
+              <li>Supported office in communications and technology</li>
+              <li>Maintained website with Drupal</li>
+            </ul>
+          </div>
+        </div>
+      </section> <!-- end .experience -->
     </div> <!-- end .container-->
 
-    </main>
-    <div class="download mt-4">
-      <form action="/Resume-8-22.pdf" method="get">
-        <button class="download-btn" type="submit">Download PDF</button>
-      </form>
-    </div>
-    <footer include-html="includes/footer.html"></footer>
-    <script src="js/includeHTML.js"></script>
-    <script>includeHTML();</script>
-  </body>
+  </main>
+  <div class="download mt-4">
+    <form action="/Resume-8-22.pdf" method="get">
+      <button class="download-btn" type="submit">Download PDF</button>
+    </form>
+  </div>
+  <footer include-html="includes/footer.html"></footer>
+  <script src="js/includeHTML.js"></script>
+  <script>includeHTML();</script>
+</body>
+
 </html>
